--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,25 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <!-- SEO -->
+    <meta property="og:title" content="Medico Funcional | Dra. Lucia Cortez">
+    <meta property="og:description" content="Medicina Funcional en Cartagena">
+    <meta property="og:image" content="https://www.docconmigo.com/imgs/luci.png">
+    <meta property="og:url" content="https://www.docconmigo.com">
+
+    <meta name="twitter:title" content="Medico Funcional | Dra. Lucia Cortez">
+    <meta name="twitter:description" content="Medicina Funcional en Cartagena">
+    <meta name="twitter:image" content="https://www.docconmigo.com/imgs/luci.png">
+    <meta name="twitter:url" content="https://www.docconmigo.com">
+
+    <meta name="robots" content="index,follow"> <!-- Por defecto, permite el indexado y seguimiento -->
+    <meta name="robots" content="noindex,nofollow"> <!-- No permite indexado ni seguimiento -->
+
+    <meta name="description" content="Médico Funcional Cartagena"/>
+    <meta name="keywords" content="medico funcional, cartagena, diabetes, hipertensión, bajar de peso, energia, cansancio">
     <title>DocConmigo | Dra. Lucia Cortez</title>
   </head>
   <body>
