--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta property="description" content="Consultorio de Medicina Funcional en Cartagena | DocConmigo | Cl. 31 N° 57A-38, Centro Medico Los Ejecutivos, Consultorio 220, Escallón Villa | Tambieén consultas virtuales">
+    <meta property="description" content="Consultorio de Medicina Funcional en Cartagena | DocConmigo | Cl. 31 N° 57A-38, Centro Medico Los Ejecutivos, Consultorio 220, Escallón Villa | También consultas virtuales">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
